# UMAP

./: .gitignore  API_DOCUMENTATION.md  CLAUDE.md  README.md  REFACTORING_ANALYSIS.md  REFACTORING_PLAN.md  SESSION_STATE_QUANTIZATION_REINTEGRATION.md  VERSION_HISTORY.md  test_error_fixes.cpp  test_save_load_fix.cpp
.claude/: settings.local.json
UMAPuwotSharp/: UMapSharp.sln  build_nuget.bat  publish_latest.bat  publish_nuget.bat  publish_nuget_interactive.bat  test_version_detection.bat  validate_package.bat  verify_binaries.bat
UMAPuwotSharp/UMAPuwotSharp/: UMAPuwotSharp.csproj  UMAPuwotSharp.targets  UMapModel.cs
UMAPuwotSharp/UMAPuwotSharp.Example/: Program.cs  UMAPuwotSharp.Example.csproj
UMAPuwotSharp/UMAPuwotSharp.Tests/: PerformanceBenchmarkTests.cs  README.md  UMAPuwotSharp.Tests.csproj  UMapModelTests.cs
uwot_pure_cpp/: BuildDockerLinuxWindows.bat  Buildwindows.bat  CMakeLists.txt  EXTRACTION_REPORT.md  README.txt  build_instructions.md  build_test.bat  comprehensive_test.cpp  enhanced_test.cpp  errors.txt  fit_project_save_load_test.cpp  hnsw_validation_test.cpp  minimal_umap_test.cpp  simple_load_save_test.cpp  smooth_knn.h  temp_load_function.txt  temp_save_function.txt  test_build.bat  test_build.sh  test_comprehensive_pipeline.cpp  test_enhanced_wrapper.cpp  test_error_fixes.umap  test_error_fixes_simple.cpp  test_metric_validation.cpp  test_quantization_comprehensive.cpp  test_save_load_fix.cpp  test_standard_comprehensive.cpp  test_validation_readme.md  uwot_distance.cpp  uwot_distance.h  uwot_fit.cpp  uwot_fit.h  uwot_hnsw_utils.cpp  uwot_hnsw_utils.h  uwot_model.cpp  uwot_model.h  uwot_persistence.cpp  uwot_persistence.h  uwot_progress_utils.cpp  uwot_progress_utils.h  (+8 more)
uwot_pure_cpp/build-test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  UMAPWrapper.sln  UMAPWrapperTargets.cmake  UMWWGBWrapper.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  comprehensive_test.vcxproj  comprehensive_test.vcxproj.filters  hnsw_validation_test.vcxproj  hnsw_validation_test.vcxproj.filters  test_comprehensive_pipeline.vcxproj  test_comprehensive_pipeline.vcxproj.filters  test_enhanced_wrapper.vcxproj  test_enhanced_wrapper.vcxproj.filters  test_error_fixes_simple.vcxproj  test_error_fixes_simple.vcxproj.filters  test_standard_comprehensive.vcxproj  test_standard_comprehensive.vcxproj.filters  uwot_wrapper.vcxproj  uwot_wrapper.vcxproj.filters
uwot_pure_cpp/build-test/Release/: test_error_fixes.umap  test_model.umap  test_save_load_v5.umap  test_standard_20d.umap  test_standard_2d.umap  uwot.exp  uwot.lib
uwot_pure_cpp/build-test/comprehensive_test.dir/Release/: comprehensive_test.exe.recipe
uwot_pure_cpp/build-test/comprehensive_test.dir/Release/comprehe.1B1A9297.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
uwot_pure_cpp/build-test/hnsw_validation_test.dir/Release/: hnsw_validation_test.exe.recipe
uwot_pure_cpp/build-test/hnsw_validation_test.dir/Release/hnsw_val.E2365E5F.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
uwot_pure_cpp/build-test/test_comprehensive_pipeline.dir/Release/: test_comprehensive_pipeline.exe.recipe
uwot_pure_cpp/build-test/test_comprehensive_pipeline.dir/Release/test_com.C7E69E03.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  test_comprehensive_pipeline.lastbuildstate
uwot_pure_cpp/build-test/test_enhanced_wrapper.dir/Release/: test_enhanced_wrapper.exe.recipe
uwot_pure_cpp/build-test/test_enhanced_wrapper.dir/Release/test_enh.CFA1AC3F.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
uwot_pure_cpp/build-test/test_error_fixes_simple.dir/Release/: test_error_fixes_simple.exe.recipe
uwot_pure_cpp/build-test/test_error_fixes_simple.dir/Release/test_err.99DDFE4E.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
uwot_pure_cpp/build-test/test_standard_comprehensive.dir/Release/: test_standard_comprehensive.exe.recipe
uwot_pure_cpp/build-test/test_standard_comprehensive.dir/Release/test_sta.DF3DE267.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
uwot_pure_cpp/build-test/uwot_wrapper.dir/Release/: uwot.dll.recipe
uwot_pure_cpp/build-test/uwot_wrapper.dir/Release/uwot_wrapper.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
uwot_pure_cpp/build-test/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
uwot_pure_cpp/build-test/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
uwot_pure_cpp/build-test/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
